--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 There are undergraduate and graduate buildings on campus. There's also on-campus dorms. In the far view of the image, we can see the city structure of Nashville and various housings. The image seems to be taken during spring or summer since the leaves are vivid and green.
             </p>
         </div>
+        <div>
         <h3> Cheekwood Arboretum</h3>
         <img src = "images/Nashville_cheekwood.webp" alt = "A beautiful garden in Nashville" width = "200" height = "300">
         <!-- <a href = "Images/Nashville_cheekwood.webp" class="imglink"> Image of Cheekwood </a> -->
@@ -60,6 +61,7 @@
         <p>
             Cheekwood is a large arboretum consisting of multiple gardens and even a huge mansion. There are garden other countries and gardens named after the plants' names. 
         </p>
+    </div>
         <div>
             <h2> Parthenon in Nashville </h2>
             <img src = "images/Nasville_parthenon.jpg" alt = "The clone of Parthenon" width="200" height="300">
