complete view: included desktop

--- a/pets.html
+++ b/pets.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href = "css/reset.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link rel="stylesheet" href = "css/style.css"> 
     <title>Pets</title>
 </head>
@@ -108,9 +110,9 @@
                 <li>Cuddles</li>
             </ul>
             
-            <!-- Syeda Shahriah -->
         </div>
     </main>
-    
 </body>
+<script src="javascript.js"></script>
+
 </html>
