--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href = "css/reset.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link rel="stylesheet" href="css/style.css">
+
     <title>Travel</title>
 </head>
 <body id="travel">
@@ -52,7 +57,7 @@
             </p>
         </div>
         <div>
-        <h3> Cheekwood Arboretum</h3>
+        <h2> Cheekwood Arboretum</h2>
         <img src = "images/Nashville_cheekwood.webp" alt = "A beautiful garden in Nashville" width = "200" height = "300">
         <!-- <a href = "Images/Nashville_cheekwood.webp" class="imglink"> Image of Cheekwood </a> -->
         <p> 
@@ -94,4 +99,6 @@
         
     </main>
 </body>
+<script src="javascript.js"></script>
+
 </html>
