--- a/recipes.html
+++ b/recipes.html
@@ -38,7 +38,7 @@
             
                     <img src="images/tikkamasala_1.jpg" width = "400" height="300" alt="Delicious chicken">
                    
-                    <i class="fas fa-info-circle" focus ="expandIcon(this)"></i>
+                    <i class="fas fa-info-circle"></i>
 
                         <p class = "hidden"> Contains meat, dairy, gluten </p>
 
